[tool.poetry]
name = "vortexasdk"
version = "0.2.3"
description = "Vorexa DataScience SDK (Software Developlent Kit)"
authors = ["Vortexa Developers <developers@vortexa.com>"]
readme = 'README.md'

repository='https://github.com/V0RT3X4/python-sdk'
homepage='https://github.com/V0RT3X4/python-sdk'

classifiers=[
        "Programming Language :: Python :: 3.7",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "0.25.2"
requests = "2.22.0"
jsons = "1.0.0"
flatten-dict = "0.2.0"

[tool.poetry.dev-dependencies]
nose2 = '0.9.1'
pre-commit = '1.20.0'
flake8 = '3.7.9'
pydoc-markdown = '2.0.4'
tabulate = '0.8.5'
six = '1.12.0'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


